# django-lesson-01

./: .gitignore  .pg_service.conf  pyproject.toml
blog/: urls.py  views.py
blog/templates/: index.html  register.html
main/: settings.py
static/css/: signin.css
templates/: base.html
templates/partials/: big-popular-post.html  navbar.html  sidebar.html  small-popular-posts.html
