[tool.poetry]
name = "teach-django-01"
version = "0.1.0"
description = ""
authors = ["Tim <timvash90@gmail.com>"]
readme = "README.md"
packages = [{include = "teach_django_01"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
